--- a/python-server_side_rendering/templates/index.html
+++ b/python-server_side_rendering/templates/index.html
@@ -1,15 +1,20 @@
+<!-- templates/index.html -->
 <!doctype html>
 <html lang="en">
 <head>
-	<title>My Flask App</title>
+    <title>My Flask App - Home</title>
 </head>
 <body>
-	<h1>Welcome to My Flask App</h1>
-	<p>This is a simple Flask application.</p>
-	<ul>
-		<li>Flask</li>
-		<li>HTML</li>
-		<li>Templates</li>
-	</ul>
+    {% include 'header.html' %}
+    
+    <h1>Welcome to My Flask App</h1>
+    <p>This is a simple Flask application.</p>
+    <ul>
+        <li>Flask</li>
+        <li>HTML</li>
+        <li>Templates</li>
+    </ul>
+
+    {% include 'footer.html' %}
 </body>
 </html>
